--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
                 <a href="register.html">Sign up?</a>
                 <a href="forgot_password.php">Forgot Password</a>
             </div>
-
+            <a href="./index.php" class="go-home">Go Home</a> <br><br>
             <button type="submit">Login</button>
         </form>
        
